--- a/PROJECT2/events.html
+++ b/PROJECT2/events.html
@@ -31,6 +31,7 @@
         <div class="mathcup-column">
             <p class="matchup-info">Lakers vs. Nuggets</p>
             <p class="matchup-date">October 24, 7:30 PM</p>
+            <p class="hoverCaption">Hover For More Information</p>
         </div>
         <img src="images/nuggets_logo.png" alt="Nuggets Logo" class="matchup-image2">
     </div>
@@ -64,6 +65,7 @@
         <div class="matchup-column">
             <p class="matchup-info">Suns vs. Warriors</p>
             <p class="matchup-date">October 24, 10:00 PM</p>
+            <p class="hoverCaption">Hover For More Information</p>
         </div>
         <img src="images/warriors_logo.png" alt="Warriors Logo" class="matchup-image2">
     </div>
